# q2-boots

./: .gitattributes  .gitignore  .readthedocs.yml  LICENSE  Makefile  README.md  pipeline-chart.md  pipeline-key.md  pyproject.toml  setup.cfg  setup.py  versioneer.py
.github/workflows/: ci-dev.yaml  ci.yml  release-env.yml
conda-recipe/: meta.yaml
docs/: .copier-answers.yml  .gitignore  .readthedocs.yml  Makefile  README.md
docs/book/: intro.md  myst.yml  q2doc-plug.py  tutorial.md
docs/environment-files/: readthedocs.yml
environment-files/: development-q2-boots-environment.yml  q2-boots-qiime2-amplicon-2024.10.yml  q2-boots-qiime2-amplicon-2024.5.yml  q2-boots-qiime2-amplicon-2025.4.yml  q2-boots-qiime2-amplicon-2025.7-release-2025.7.beta.yml  q2-boots-qiime2-amplicon-2025.7.yml  q2-boots-qiime2-amplicon-release.yml
environments/: q2-boots-qiime2-amplicon-2024.10.yml  q2-boots-qiime2-amplicon-2024.2.yml  q2-boots-qiime2-amplicon-2024.5.yml
images/: pipeline-key.md
q2_boots/: __init__.py  _alpha.py  _beta.py  _core_metrics.py  _examples.py  _kmer_diversity.py  _normalize.py  _resample.py  _version.py  alpha.py  beta.py  citations.bib  core_metrics.py  diversity_metrics.py  plugin_setup.py
q2_boots/tests/: test_alpha.py  test_beta.py  test_core_metrics.py  test_diversity_metrics.py  test_examples.py  test_kmer_diversity.py  test_normalize.py  test_resample.py
